Dibuat menggunakan Colab

--- a/04_pytorch_custom_datasets.ipynb
+++ b/04_pytorch_custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNsLFrXmknfG4WHJr23toaW"
+      "authorship_tag": "ABX9TyO/joCQ6cadUmPzItRCfsaQ"
     },
     "kernelspec": {
       "name": "python3",
@@ -909,9 +909,104 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import os\n",
+        "os.cpu_count()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4oP_1OFedoUl",
+        "outputId": "1146c896-9d37-4892-ccb0-4cae36cae42a"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Ubah data latih dan data test ke DataLoader\n",
+        "from torch.utils.data import DataLoader\n",
+        "\n",
+        "BATCH_SIZE = 1\n",
+        "\n",
+        "train_dataloader = DataLoader(dataset=train_data,\n",
+        "                              batch_size=BATCH_SIZE,\n",
+        "                              num_workers=1,\n",
+        "                              shuffle=True)\n",
+        "test_dataloader = DataLoader(dataset=test_data,\n",
+        "                             batch_size=BATCH_SIZE,\n",
+        "                             num_workers=1,\n",
+        "                             shuffle=False)\n",
+        "\n",
+        "train_dataloader, test_dataloader"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NKQJ-3Vpc8sl",
+        "outputId": "873e544c-e7cc-4c0b-c01c-414941e9f147"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<torch.utils.data.dataloader.DataLoader at 0x7ca1b77cdd10>,\n",
+              " <torch.utils.data.dataloader.DataLoader at 0x7ca1b7788590>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "img, label = next(iter(train_dataloader))\n",
+        "\n",
+        "print(f\"Bentuk gambar: {img.shape} -> [Batch size, C, H, W]\")\n",
+        "print(f\"Label shape {label.shape}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1gIBt_3reB4B",
+        "outputId": "ddb8a16a-bbd9-4f98-84d6-3e9126b2137e"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bentuk gambar: torch.Size([1, 3, 64, 64]) -> [Batch size, C, H, W]\n",
+            "Label shape torch.Size([1])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "NKQJ-3Vpc8sl"
+        "id": "wjRUN5LXezg1"
       },
       "execution_count": null,
       "outputs": []
