Dibuat menggunakan Colab

--- a/04_pytorch_custom_datasets.ipynb
+++ b/04_pytorch_custom_datasets.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/SiPilip/pytorch_course/blob/main/04_pytorch_custom_datasets.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "yBq9xh1yHrg7"
       },
       "source": [
@@ -2176,7 +2186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": 160,
       "metadata": {
         "id": "4l88Q-POfTcK"
       },
@@ -2227,7 +2237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 153,
+      "execution_count": 168,
       "metadata": {
         "id": "QLd-NOxmheGJ"
       },
@@ -2251,12 +2261,12 @@
         "\n",
         "  # 3. Lakukan perulangan dalam fungsi training dan testing sesuai jumlah epochs\n",
         "  for epoch in tqdm(range(epochs)):\n",
-        "    train_loss, train_acc = train_step(model,\n",
+        "    train_loss, train_acc = train_step(model=model,\n",
         "                                       dataloader=train_dataloader,\n",
         "                                       loss_fn=loss_fn,\n",
         "                                       optimizer=optimizer,\n",
         "                                       device=device)\n",
-        "    test_loss, test_acc = test_step(model,\n",
+        "    test_loss, test_acc = test_step(model=model,\n",
         "                                    dataloader=test_dataloader,\n",
         "                                    loss_fn=loss_fn,\n",
         "                                    device=device)\n",
@@ -2285,7 +2295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 154,
+      "execution_count": 175,
       "metadata": {
         "id": "WpMpakQ-iP6_"
       },
@@ -2301,7 +2311,7 @@
         "# Buat ulang instansi dari TinyVGG\n",
         "model_0 = TinyVGG(input_shape=3,\n",
         "                  hidden_units=10,\n",
-        "                  output_shape=len(class_names)).to(device)\n",
+        "                  output_shape=len(train_data.classes)).to(device)\n",
         "\n",
         "# Setup loss function dan optimizer\n",
         "loss_fn = nn.CrossEntropyLoss()\n",
@@ -2311,13 +2321,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 155,
+      "execution_count": 176,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PnbiBXzsp--P",
-        "outputId": "59bd6a37-c8d3-4e34-e50e-dac4b3cf3ac9"
+        "outputId": "2b4e20f9-19c4-4658-f814-595b6d32c39f"
       },
       "outputs": [
         {
@@ -2336,27 +2346,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 156,
+      "execution_count": 177,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173,
           "referenced_widgets": [
-            "c6d6ad11b1e74d07a21a257c13716078",
-            "ea6c6a0db82340ed907b39f8910d1141",
-            "7a6e5702ff8049c5817113a6a643f539",
-            "cf433ad24274458dba8c13137fb47334",
-            "8964887a53624b2e8d93ed3d2be094d1",
-            "d566e8dad6f64796b5e929e439c44bf9",
-            "fbae826cd0a2428bb1c844c17de73f2d",
-            "e026065943874fc590f7f17c414d28fb",
-            "4f04cc65f1404355870e24f9dcf6a662",
-            "c0fa0aa9b4a94be399d4a7f95e310ca9",
-            "358017075bb24513b58daf586ca35a8e"
+            "4a72c52ef2d74204a0266467521a42d4",
+            "bae963362b3f4bf59a3b13b220c7a4a7",
+            "4f057b9d1473410393ff1ab5e14f84f7",
+            "c8b6af76b4d74706ba05b801d68b3458",
+            "699d9844068f4792936a9f01f3cfafc3",
+            "0ea0e38ea07543c99159af3707c18ac3",
+            "274d018cb20841aa8ebfb4cd7cea86b6",
+            "33b2c9d9b0fc493495ad0a990ead7979",
+            "13ec4e398f7b4ec4ada1b7599ce7159a",
+            "19f6585d92d54475b453f98684102809",
+            "dbf5b24914484d8fa2e2a24fe5173e6f"
           ]
         },
         "id": "MqC8XtLop--P",
-        "outputId": "19f90889-f28e-4e01-b2ff-c7123a6fb252"
+        "outputId": "6ebe7696-a996-418b-8525-8769e50773ed"
       },
       "outputs": [
         {
@@ -2368,7 +2378,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "c6d6ad11b1e74d07a21a257c13716078"
+              "model_id": "4a72c52ef2d74204a0266467521a42d4"
             }
           },
           "metadata": {}
@@ -2382,7 +2392,7 @@
             "Epoch: 2 | Train Loss: 1.0869 | Train Acc: 0.1250 | Test Loss: 1.0808 | Test Acc: 0.4924\n",
             "Epoch: 3 | Train Loss: 1.0842 | Train Acc: 0.0000 | Test Loss: 1.0608 | Test Acc: 0.5833\n",
             "Epoch: 4 | Train Loss: 1.0662 | Train Acc: 0.0000 | Test Loss: 1.0654 | Test Acc: 0.5644\n",
-            "Total training time:  31.699 seconds\n"
+            "Total training time:  11.330 seconds\n"
           ]
         }
       ],
@@ -2416,13 +2426,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": 178,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "V467qlyUp--P",
-        "outputId": "866bb469-eb01-4d8a-e925-4f41e892a887"
+        "outputId": "143967a6-481c-4218-c67e-ff0ccdc4fa9c"
       },
       "outputs": [
         {
@@ -2433,7 +2443,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 157
+          "execution_count": 178
         }
       ],
       "source": [
@@ -2450,7 +2460,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": 179,
       "metadata": {
         "id": "j_IDW5zIp--P"
       },
@@ -2490,14 +2500,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 180,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 357
         },
         "id": "VmMSrqF8p--P",
-        "outputId": "1fe4c7d3-c00f-40c0-bb89-ab10c9aa935f"
+        "outputId": "7efd5263-1671-4a11-ceeb-dccd03856a16"
       },
       "outputs": [
         {
@@ -2517,7 +2527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": 180,
       "metadata": {
         "id": "WqHNZqoLp--P"
       },
@@ -2527,7 +2537,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -2538,7 +2549,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "c6d6ad11b1e74d07a21a257c13716078": {
+        "4a72c52ef2d74204a0266467521a42d4": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -2553,14 +2564,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_ea6c6a0db82340ed907b39f8910d1141",
-              "IPY_MODEL_7a6e5702ff8049c5817113a6a643f539",
-              "IPY_MODEL_cf433ad24274458dba8c13137fb47334"
+              "IPY_MODEL_bae963362b3f4bf59a3b13b220c7a4a7",
+              "IPY_MODEL_4f057b9d1473410393ff1ab5e14f84f7",
+              "IPY_MODEL_c8b6af76b4d74706ba05b801d68b3458"
             ],
-            "layout": "IPY_MODEL_8964887a53624b2e8d93ed3d2be094d1"
+            "layout": "IPY_MODEL_699d9844068f4792936a9f01f3cfafc3"
           }
         },
-        "ea6c6a0db82340ed907b39f8910d1141": {
+        "bae963362b3f4bf59a3b13b220c7a4a7": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -2575,13 +2586,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_d566e8dad6f64796b5e929e439c44bf9",
+            "layout": "IPY_MODEL_0ea0e38ea07543c99159af3707c18ac3",
             "placeholder": "​",
-            "style": "IPY_MODEL_fbae826cd0a2428bb1c844c17de73f2d",
+            "style": "IPY_MODEL_274d018cb20841aa8ebfb4cd7cea86b6",
             "value": "100%"
           }
         },
-        "7a6e5702ff8049c5817113a6a643f539": {
+        "4f057b9d1473410393ff1ab5e14f84f7": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -2597,15 +2608,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_e026065943874fc590f7f17c414d28fb",
+            "layout": "IPY_MODEL_33b2c9d9b0fc493495ad0a990ead7979",
             "max": 5,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_4f04cc65f1404355870e24f9dcf6a662",
+            "style": "IPY_MODEL_13ec4e398f7b4ec4ada1b7599ce7159a",
             "value": 5
           }
         },
-        "cf433ad24274458dba8c13137fb47334": {
+        "c8b6af76b4d74706ba05b801d68b3458": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -2620,13 +2631,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_c0fa0aa9b4a94be399d4a7f95e310ca9",
+            "layout": "IPY_MODEL_19f6585d92d54475b453f98684102809",
             "placeholder": "​",
-            "style": "IPY_MODEL_358017075bb24513b58daf586ca35a8e",
-            "value": " 5/5 [00:31&lt;00:00,  6.27s/it]"
+            "style": "IPY_MODEL_dbf5b24914484d8fa2e2a24fe5173e6f",
+            "value": " 5/5 [00:11&lt;00:00,  2.13s/it]"
           }
         },
-        "8964887a53624b2e8d93ed3d2be094d1": {
+        "699d9844068f4792936a9f01f3cfafc3": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -2678,7 +2689,7 @@
             "width": null
           }
         },
-        "d566e8dad6f64796b5e929e439c44bf9": {
+        "0ea0e38ea07543c99159af3707c18ac3": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -2730,7 +2741,7 @@
             "width": null
           }
         },
-        "fbae826cd0a2428bb1c844c17de73f2d": {
+        "274d018cb20841aa8ebfb4cd7cea86b6": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -2745,7 +2756,7 @@
             "description_width": ""
           }
         },
-        "e026065943874fc590f7f17c414d28fb": {
+        "33b2c9d9b0fc493495ad0a990ead7979": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -2797,7 +2808,7 @@
             "width": null
           }
         },
-        "4f04cc65f1404355870e24f9dcf6a662": {
+        "13ec4e398f7b4ec4ada1b7599ce7159a": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -2813,7 +2824,7 @@
             "description_width": ""
           }
         },
-        "c0fa0aa9b4a94be399d4a7f95e310ca9": {
+        "19f6585d92d54475b453f98684102809": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -2865,7 +2876,7 @@
             "width": null
           }
         },
-        "358017075bb24513b58daf586ca35a8e": {
+        "dbf5b24914484d8fa2e2a24fe5173e6f": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
