progress: creating transfoms manual

--- a/06_pytorch_transfer_learning/06_pytorch_transfer_learning.ipynb
+++ b/06_pytorch_transfer_learning/06_pytorch_transfer_learning.ipynb
@@ -200,7 +200,16 @@
     "\n",
     "Sekrang setelah kita mendapatkan data, kita akan mengubahnya menjadi PyTorch Dataloaders.\n",
     "\n",
-    "Untuk melakukannya kita bisa menggunakan `data_setup.py`\n"
+    "Untuk melakukannya kita bisa menggunakan `data_setup.py`\n",
+    "\n",
+    "Ketika kita memuat data, kita harus berfikir tentang bagaimana transformnya\n",
+    "\n",
+    "Dan dengan `torchvision` ada 2 cara:\n",
+    "\n",
+    "1. Transforms yang dibuat manual - Kita yang mendefenisikan sendiri\n",
+    "2. Transform yang terbuat otomatis - Transforms yang di definiskan oleh model yang kita gunakan sekarang\n",
+    "\n",
+    "Kita menggunakan pretrained model, adalah penting, data yang melewati itu diubah ke cara yang sama denga model tersebut dilatih\n"
    ]
   },
   {
@@ -209,7 +218,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from going_modular.going_modular import data_setup"
+    "from going_modular.going_modular import data_setup\n",
+    "\n",
+    "train_dataloader, test_dataloader, class_names = data_setup.create_dataloaders()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 Membuat transformasi untuk `torchvision.model` (Manual)\n"
    ]
   }
  ],
