--- a/05_going_modular/05_pytorch_going_modular_cell_mode.ipynb
+++ b/05_going_modular/05_pytorch_going_modular_cell_mode.ipynb
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1200,126 +1200,203 @@
     "\n",
     "\"\"\"Berisi fungsi untuk melatih dan mengetes model PyTorch\"\"\"\n",
     "\n",
-    "from typing import Dict, List, Tuple\n",
-    "\n",
-    "import torch \n",
+    "import torch\n",
     "\n",
     "from tqdm.auto import tqdm\n",
+    "from typing import Dict, List, Tuple\n",
     "\n",
-    "def train(model: torch.nn.Module, \n",
+    "def train_step(model: torch.nn.Module, \n",
     "               dataloader: torch.utils.data.DataLoader, \n",
     "               loss_fn: torch.nn.Module, \n",
     "               optimizer: torch.optim.Optimizer,\n",
     "               device: torch.device) -> Tuple[float, float]:\n",
-    "  \"\"\"Trains a PyTorch model for a single epoch.\n",
+    "    \"\"\"Trains a PyTorch model for a single epoch.\n",
     "\n",
-    "  Turns a target PyTorch model to training mode and then\n",
-    "  runs through all of the required training steps (forward\n",
-    "  pass, loss calculation, optimizer step).\n",
+    "    Turns a target PyTorch model to training mode and then\n",
+    "    runs through all of the required training steps (forward\n",
+    "    pass, loss calculation, optimizer step).\n",
     "\n",
-    "  Args:\n",
+    "    Args:\n",
     "    model: A PyTorch model to be trained.\n",
     "    dataloader: A DataLoader instance for the model to be trained on.\n",
     "    loss_fn: A PyTorch loss function to minimize.\n",
     "    optimizer: A PyTorch optimizer to help minimize the loss function.\n",
     "    device: A target device to compute on (e.g. \"cuda\" or \"cpu\").\n",
     "\n",
-    "  Returns:\n",
+    "    Returns:\n",
     "    A tuple of training loss and training accuracy metrics.\n",
     "    In the form (train_loss, train_accuracy). For example:\n",
-    "    \n",
+    "\n",
     "    (0.1112, 0.8743)\n",
-    "  \"\"\"\n",
-    "  # Put model in train mode\n",
-    "  model.train()\n",
-    "  \n",
-    "  # Setup train loss and train accuracy values\n",
-    "  train_loss, train_acc = 0, 0\n",
-    "  \n",
-    "  # Loop through data loader data batches\n",
-    "  for batch, (X, y) in enumerate(dataloader):\n",
-    "      # Send data to target device\n",
-    "      X, y = X.to(device), y.to(device)\n",
+    "    \"\"\"\n",
+    "    # Put model in train mode\n",
+    "    model.train()\n",
     "\n",
-    "      # 1. Forward pass\n",
-    "      y_pred = model(X)\n",
+    "    # Setup train loss and train accuracy values\n",
+    "    train_loss, train_acc = 0, 0\n",
     "\n",
-    "      # 2. Calculate  and accumulate loss\n",
-    "      loss = loss_fn(y_pred, y)\n",
-    "      train_loss += loss.item() \n",
+    "    # Loop through data loader data batches\n",
+    "    for batch, (X, y) in enumerate(dataloader):\n",
+    "        # Send data to target device\n",
+    "        X, y = X.to(device), y.to(device)\n",
     "\n",
-    "      # 3. Optimizer zero grad\n",
-    "      optimizer.zero_grad()\n",
+    "        # 1. Forward pass\n",
+    "        y_pred = model(X)\n",
     "\n",
-    "      # 4. Loss backward\n",
-    "      loss.backward()\n",
+    "        # 2. Calculate  and accumulate loss\n",
+    "        loss = loss_fn(y_pred, y)\n",
+    "        train_loss += loss.item() \n",
     "\n",
-    "      # 5. Optimizer step\n",
-    "      optimizer.step()\n",
+    "        # 3. Optimizer zero grad\n",
+    "        optimizer.zero_grad()\n",
     "\n",
-    "      # Calculate and accumulate accuracy metric across all batches\n",
-    "      y_pred_class = torch.argmax(torch.softmax(y_pred, dim=1), dim=1)\n",
-    "      train_acc += (y_pred_class == y).sum().item()/len(y_pred)\n",
+    "        # 4. Loss backward\n",
+    "        loss.backward()\n",
     "\n",
-    "  # Adjust metrics to get average loss and accuracy per batch \n",
-    "  train_loss = train_loss / len(dataloader)\n",
-    "  train_acc = train_acc / len(dataloader)\n",
-    "  return train_loss, train_acc\n",
+    "        # 5. Optimizer step\n",
+    "        optimizer.step()\n",
     "\n",
-    "def test(model: torch.nn.Module, \n",
+    "        # Calculate and accumulate accuracy metric across all batches\n",
+    "        y_pred_class = torch.argmax(torch.softmax(y_pred, dim=1), dim=1)\n",
+    "        train_acc += (y_pred_class == y).sum().item()/len(y_pred)\n",
+    "\n",
+    "    # Adjust metrics to get average loss and accuracy per batch \n",
+    "    train_loss = train_loss / len(dataloader)\n",
+    "    train_acc = train_acc / len(dataloader)\n",
+    "    return train_loss, train_acc\n",
+    "\n",
+    "def test_step(model: torch.nn.Module, \n",
     "              dataloader: torch.utils.data.DataLoader, \n",
     "              loss_fn: torch.nn.Module,\n",
     "              device: torch.device) -> Tuple[float, float]:\n",
-    "  \"\"\"Tests a PyTorch model for a single epoch.\n",
+    "    \"\"\"Tests a PyTorch model for a single epoch.\n",
     "\n",
-    "  Turns a target PyTorch model to \"eval\" mode and then performs\n",
-    "  a forward pass on a testing dataset.\n",
+    "    Turns a target PyTorch model to \"eval\" mode and then performs\n",
+    "    a forward pass on a testing dataset.\n",
     "\n",
-    "  Args:\n",
+    "    Args:\n",
     "    model: A PyTorch model to be tested.\n",
     "    dataloader: A DataLoader instance for the model to be tested on.\n",
     "    loss_fn: A PyTorch loss function to calculate loss on the test data.\n",
     "    device: A target device to compute on (e.g. \"cuda\" or \"cpu\").\n",
     "\n",
-    "  Returns:\n",
+    "    Returns:\n",
     "    A tuple of testing loss and testing accuracy metrics.\n",
     "    In the form (test_loss, test_accuracy). For example:\n",
-    "    \n",
-    "    (0.0223, 0.8985)\n",
-    "  \"\"\"\n",
-    "  # Put model in eval mode\n",
-    "  model.eval() \n",
-    "  \n",
-    "  # Setup test loss and test accuracy values\n",
-    "  test_loss, test_acc = 0, 0\n",
-    "  \n",
-    "  # Turn on inference context manager\n",
-    "  with torch.inference_mode():\n",
-    "      # Loop through DataLoader batches\n",
-    "      for batch, (X, y) in enumerate(dataloader):\n",
-    "          # Send data to target device\n",
-    "          X, y = X.to(device), y.to(device)\n",
-    "  \n",
-    "          # 1. Forward pass\n",
-    "          test_pred_logits = model(X)\n",
     "\n",
-    "          # 2. Calculate and accumulate loss\n",
-    "          loss = loss_fn(test_pred_logits, y)\n",
-    "          test_loss += loss.item()\n",
-    "          \n",
-    "          # Calculate and accumulate accuracy\n",
-    "          test_pred_labels = test_pred_logits.argmax(dim=1)\n",
-    "          test_acc += ((test_pred_labels == y).sum().item()/len(test_pred_labels))\n",
-    "          \n",
-    "  # Adjust metrics to get average loss and accuracy per batch \n",
-    "  test_loss = test_loss / len(dataloader)\n",
-    "  test_acc = test_acc / len(dataloader)\n",
-    "  return test_loss, test_acc"
+    "    (0.0223, 0.8985)\n",
+    "    \"\"\"\n",
+    "    # Put model in eval mode\n",
+    "    model.eval() \n",
+    "\n",
+    "    # Setup test loss and test accuracy values\n",
+    "    test_loss, test_acc = 0, 0\n",
+    "\n",
+    "    # Turn on inference context manager\n",
+    "    with torch.inference_mode():\n",
+    "        # Loop through DataLoader batches\n",
+    "        for batch, (X, y) in enumerate(dataloader):\n",
+    "            # Send data to target device\n",
+    "            X, y = X.to(device), y.to(device)\n",
+    "\n",
+    "            # 1. Forward pass\n",
+    "            test_pred_logits = model(X)\n",
+    "\n",
+    "            # 2. Calculate and accumulate loss\n",
+    "            loss = loss_fn(test_pred_logits, y)\n",
+    "            test_loss += loss.item()\n",
+    "\n",
+    "            # Calculate and accumulate accuracy\n",
+    "            test_pred_labels = test_pred_logits.argmax(dim=1)\n",
+    "            test_acc += ((test_pred_labels == y).sum().item()/len(test_pred_labels))\n",
+    "\n",
+    "    # Adjust metrics to get average loss and accuracy per batch \n",
+    "    test_loss = test_loss / len(dataloader)\n",
+    "    test_acc = test_acc / len(dataloader)\n",
+    "    return test_loss, test_acc\n",
+    "\n",
+    "def train(model: torch.nn.Module, \n",
+    "          train_dataloader: torch.utils.data.DataLoader, \n",
+    "          test_dataloader: torch.utils.data.DataLoader, \n",
+    "          optimizer: torch.optim.Optimizer,\n",
+    "          loss_fn: torch.nn.Module,\n",
+    "          epochs: int,\n",
+    "          device: torch.device) -> Dict[str, List]:\n",
+    "    \"\"\"Trains and tests a PyTorch model.\n",
+    "\n",
+    "    Passes a target PyTorch models through train_step() and test_step()\n",
+    "    functions for a number of epochs, training and testing the model\n",
+    "    in the same epoch loop.\n",
+    "\n",
+    "    Calculates, prints and stores evaluation metrics throughout.\n",
+    "\n",
+    "    Args:\n",
+    "    model: A PyTorch model to be trained and tested.\n",
+    "    train_dataloader: A DataLoader instance for the model to be trained on.\n",
+    "    test_dataloader: A DataLoader instance for the model to be tested on.\n",
+    "    optimizer: A PyTorch optimizer to help minimize the loss function.\n",
+    "    loss_fn: A PyTorch loss function to calculate loss on both datasets.\n",
+    "    epochs: An integer indicating how many epochs to train for.\n",
+    "    device: A target device to compute on (e.g. \"cuda\" or \"cpu\").\n",
+    "\n",
+    "    Returns:\n",
+    "    A dictionary of training and testing loss as well as training and\n",
+    "    testing accuracy metrics. Each metric has a value in a list for \n",
+    "    each epoch.\n",
+    "    In the form: {train_loss: [...],\n",
+    "              train_acc: [...],\n",
+    "              test_loss: [...],\n",
+    "              test_acc: [...]} \n",
+    "    For example if training for epochs=2: \n",
+    "             {train_loss: [2.0616, 1.0537],\n",
+    "              train_acc: [0.3945, 0.3945],\n",
+    "              test_loss: [1.2641, 1.5706],\n",
+    "              test_acc: [0.3400, 0.2973]} \n",
+    "    \"\"\"\n",
+    "    # Create empty results dictionary\n",
+    "    results = {\"train_loss\": [],\n",
+    "               \"train_acc\": [],\n",
+    "               \"test_loss\": [],\n",
+    "               \"test_acc\": []\n",
+    "    }\n",
+    "    \n",
+    "    # Make sure model on target device\n",
+    "    model.to(device)\n",
+    "\n",
+    "    # Loop through training and testing steps for a number of epochs\n",
+    "    for epoch in tqdm(range(epochs)):\n",
+    "        train_loss, train_acc = train_step(model=model,\n",
+    "                                          dataloader=train_dataloader,\n",
+    "                                          loss_fn=loss_fn,\n",
+    "                                          optimizer=optimizer,\n",
+    "                                          device=device)\n",
+    "        test_loss, test_acc = test_step(model=model,\n",
+    "          dataloader=test_dataloader,\n",
+    "          loss_fn=loss_fn,\n",
+    "          device=device)\n",
+    "\n",
+    "        # Print out what's happening\n",
+    "        print(\n",
+    "          f\"Epoch: {epoch+1} | \"\n",
+    "          f\"train_loss: {train_loss:.4f} | \"\n",
+    "          f\"train_acc: {train_acc:.4f} | \"\n",
+    "          f\"test_loss: {test_loss:.4f} | \"\n",
+    "          f\"test_acc: {test_acc:.4f}\"\n",
+    "        )\n",
+    "\n",
+    "        # Update results dictionary\n",
+    "        results[\"train_loss\"].append(train_loss)\n",
+    "        results[\"train_acc\"].append(train_acc)\n",
+    "        results[\"test_loss\"].append(test_loss)\n",
+    "        results[\"test_acc\"].append(test_acc)\n",
+    "\n",
+    "    # Return the filled results at the end of the epochs\n",
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 72,
    "metadata": {
     "id": "rFRZw6BZWWcd"
    },
@@ -1420,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1447,7 +1524,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 1/5 [00:01<00:06,  1.71s/it]"
+      "  0%|          | 0/5 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|██        | 1/5 [00:01<00:05,  1.26s/it]"
      ]
     },
     {
@@ -1461,7 +1545,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 2/5 [00:02<00:03,  1.31s/it]"
+      " 40%|████      | 2/5 [00:02<00:03,  1.05s/it]"
      ]
     },
     {
@@ -1475,44 +1559,43 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|██████    | 3/5 [00:03<00:02,  1.13s/it]"
+      " 60%|██████    | 3/5 [00:03<00:02,  1.04s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 3 | train_loss: 1.0868 | train_acc: 0.4883 | test_loss: 1.0806 | test_acc: 0.5028\n"
+      "Epoch: 3 | train_loss: 1.0868 | train_acc: 0.4883 | test_loss: 1.0807 | test_acc: 0.4924\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████  | 4/5 [00:04<00:01,  1.01s/it]"
+      " 80%|████████  | 4/5 [00:04<00:01,  1.07s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 4 | train_loss: 1.0843 | train_acc: 0.4023 | test_loss: 1.0609 | test_acc: 0.5833\n"
+      "Epoch: 4 | train_loss: 1.0841 | train_acc: 0.3984 | test_loss: 1.0610 | test_acc: 0.5833\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:05<00:00,  1.06s/it]"
+      "100%|██████████| 5/5 [00:05<00:00,  1.11s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 5 | train_loss: 1.0664 | train_acc: 0.4102 | test_loss: 1.0656 | test_acc: 0.5644\n",
-      "[INFO] Total training time: 5.322 seconds\n",
-      "[INFO] Saving model to: models\\05_going_modular_cell_mode_tinyvgg_model.pth\n"
+      "Epoch: 5 | train_loss: 1.0663 | train_acc: 0.4141 | test_loss: 1.0655 | test_acc: 0.5644\n",
+      "[INFO] Total training time: 5.568 seconds\n"
      ]
     },
     {
@@ -1520,6 +1603,17 @@
      "output_type": "stream",
      "text": [
       "\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'save_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[73], line 35\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m[INFO] Total training time: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mend_time\u001b[38;5;241m-\u001b[39mstart_time\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m seconds\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     34\u001b[0m \u001b[38;5;66;03m# Save the model\u001b[39;00m\n\u001b[1;32m---> 35\u001b[0m \u001b[43msave_model\u001b[49m(model\u001b[38;5;241m=\u001b[39mmodel_0,\n\u001b[0;32m     36\u001b[0m            target_dir\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodels\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     37\u001b[0m            model_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m05_going_modular_cell_mode_tinyvgg_model.pth\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'save_model' is not defined"
      ]
     }
    ],
@@ -1558,7 +1652,7 @@
     "print(f\"[INFO] Total training time: {end_time-start_time:.3f} seconds\")\n",
     "\n",
     "# Save the model\n",
-    "save_model(model=model_0,\n",
+    "save_model(model=model_0, # type: ignore\n",
     "           target_dir=\"models\",\n",
     "           model_name=\"05_going_modular_cell_mode_tinyvgg_model.pth\")"
    ]
@@ -1574,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1719,6 @@
     "    batch_size=BATCH_SIZE\n",
     ")\n",
     "\n",
-    "\n",
     "# Create model with help from model_builder.py\n",
     "model = model_builder.TinyVGG(\n",
     "    input_shape=3,\n",
@@ -1655,17 +1748,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1 | train_loss: 1.0994 | train_acc: 0.3711 | test_loss: 1.1004 | test_acc: 0.1979\n",
+      "Epoch: 2 | train_loss: 1.0987 | train_acc: 0.2930 | test_loss: 1.1125 | test_acc: 0.1979\n",
+      "Epoch: 3 | train_loss: 1.0651 | train_acc: 0.4219 | test_loss: 1.1166 | test_acc: 0.1979\n",
+      "Epoch: 4 | train_loss: 1.0401 | train_acc: 0.4180 | test_loss: 1.1235 | test_acc: 0.1979\n",
+      "Epoch: 5 | train_loss: 1.0356 | train_acc: 0.4570 | test_loss: 1.1039 | test_acc: 0.3021\n",
+      "[INFO] Saving model to: models\\05_going_modular_script_mode_tinyvgg_model.pth\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  File \"d:\\UNSRI_DATA\\MACHINE LEARNING\\pytorch_course\\05_going_modular\\going_modular\\train.py\", line 8\n",
-      "    import data_setup, engine, model_builder, utils from going_modular\n",
-      "                                                    ^^^^\n",
-      "SyntaxError: invalid syntax\n"
+      "\n",
+      "  0%|          | 0/5 [00:00<?, ?it/s]\n",
+      " 20%|██        | 1/5 [00:01<00:05,  1.50s/it]\n",
+      " 40%|████      | 2/5 [00:02<00:03,  1.15s/it]\n",
+      " 60%|██████    | 3/5 [00:03<00:02,  1.07s/it]\n",
+      " 80%|████████  | 4/5 [00:04<00:01,  1.02s/it]\n",
+      "100%|██████████| 5/5 [00:05<00:00,  1.04it/s]\n",
+      "100%|██████████| 5/5 [00:05<00:00,  1.04s/it]\n"
      ]
     }
    ],
