--- a/07_pytorch_experiment_tracking/07_pytorch_experiment_tracking.ipynb
+++ b/07_pytorch_experiment_tracking/07_pytorch_experiment_tracking.ipynb
@@ -219,6 +219,7 @@
    ],
    "source": [
     "# Buat direktori\n",
+    "\n",
     "train_dir = image_path / \"train\"\n",
     "test_dir = image_path / \"test\"\n",
     "\n",
@@ -227,9 +228,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Membuat transforms secara manual: Compose(\n",
+      "    Resize(size=(224, 224), interpolation=bilinear, max_size=None, antialias=True)\n",
+      "    ToTensor()\n",
+      "    Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "# Buat ImageNet normalisasi levels\n",
     "\n",
@@ -248,11 +261,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<torch.utils.data.dataloader.DataLoader at 0x227a2267c10>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x227a234da50>,\n",
+       " ['pizza', 'steak', 'sushi'])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Buat DataLoaders\n"
+    "# Buat DataLoaders\n",
+    "\n",
+    "train_dataloader, test_dataloader, class_names = data_setup.create_dataloaders(train_dir=train_dir,\n",
+    "                                                                               test_dir=test_dir,\n",
+    "                                                                               transform=manual_transforms,\n",
+    "                                                                               batch_size=32)\n",
+    "\n",
+    "train_dataloader, test_dataloader, class_names"
    ]
   }
  ],
