--- a/07_pytorch_experiment_tracking/07_pytorch_experiment_tracking.ipynb
+++ b/07_pytorch_experiment_tracking/07_pytorch_experiment_tracking.ipynb
@@ -287,6 +287,74 @@
     "\n",
     "train_dataloader, test_dataloader, class_names"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Buat DataLoaders dengan transform otomatis\n",
+    "\n",
+    "Prinsip yang sama diterapkan denggan transform otomatis, dimana kita ingin data kustom kita memliki format yang sama dengan yang dibutuhkan oleh pretrained moodel kita\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Membuat transforms secara otomatis: ImageClassification(\n",
+      "    crop_size=[224]\n",
+      "    resize_size=[256]\n",
+      "    mean=[0.485, 0.456, 0.406]\n",
+      "    std=[0.229, 0.224, 0.225]\n",
+      "    interpolation=InterpolationMode.BICUBIC\n",
+      ")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(<torch.utils.data.dataloader.DataLoader at 0x2279add5b50>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x2279ad60b50>,\n",
+       " ['pizza', 'steak', 'sushi'])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Buat direktori\n",
+    "train_dir = image_path / \"train\"\n",
+    "test_dir = image_path / \"test\"\n",
+    "\n",
+    "# Siapkan pretrained weights\n",
+    "weights = torchvision.models.EfficientNet_B0_Weights.DEFAULT\n",
+    "\n",
+    "# Ambil transfrom dari weights nya\n",
+    "automatic_transforms = weights.transforms()\n",
+    "print(f\"Membuat transforms secara otomatis: {automatic_transforms}\")\n",
+    "\n",
+    "# Buat DataLoaders\n",
+    "train_dataloader, test_dataloader, class_names = data_setup.create_dataloaders(train_dir=train_dir,\n",
+    "                                                                               test_dir=test_dir,\n",
+    "                                                                               transform=automatic_transforms,\n",
+    "                                                                               batch_size=32)\n",
+    "\n",
+    "train_dataloader, test_dataloader, class_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
