--- a/07_pytorch_experiment_tracking/07_pytorch_experiment_tracking.ipynb
+++ b/07_pytorch_experiment_tracking/07_pytorch_experiment_tracking.ipynb
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,15 +1084,22 @@
     "        results[\"test_acc\"].append(test_acc)\n",
     "\n",
     "        ### Baru: Experiment Tracking\n",
-    "        writer.add_scalar(main_tag=\"Loss\",\n",
-    "                          tag_scalar_dict={\"train_loss\": train_loss,\n",
-    "                                           \"test_loss\": test_loss},\n",
+    "        writer.add_scalar(tag=\"Train Loss\",\n",
+    "                          scalar_value=train_loss,\n",
+    "                          global_step=epoch)\n",
+    "        writer.add_scalar(tag=\"Test Loss\",\n",
+    "                          scalar_value=test_loss,\n",
     "                          global_step=epoch)\n",
     "        \n",
-    "        writer.add_scalar(main_tag=\"Accuracy\",\n",
-    "                          tag_scalar_dict={\"train_acc\": train_acc,\n",
-    "                                           \"test_acc\": test_acc},\n",
+    "\n",
+    "        writer.add_scalar(tag=\"Train Accuracy\",\n",
+    "                          scalar_value=train_acc,\n",
     "                          global_step=epoch)\n",
+    "        writer.add_scalar(tag=\"Test Accuracy\",\n",
+    "                          scalar_value=test_acc,\n",
+    "                          global_step=epoch)\n",
+    "        \n",
+    "        \n",
     "        \n",
     "        writer.add_graph(model=model,\n",
     "                         input_to_model=torch.randn(32,3,224,224).to(device))\n",
@@ -1103,6 +1110,110 @@
     "    # Return the filled results at the end of the epochs\n",
     "    return results\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/5 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1 | train_loss: 0.5614 | train_acc: 0.9258 | test_loss: 0.6622 | test_acc: 0.8153\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|██        | 1/5 [00:04<00:19,  4.82s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 2 | train_loss: 0.6204 | train_acc: 0.7969 | test_loss: 0.6000 | test_acc: 0.8258\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 40%|████      | 2/5 [00:09<00:13,  4.46s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 3 | train_loss: 0.5663 | train_acc: 0.7891 | test_loss: 0.5310 | test_acc: 0.8561\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|██████    | 3/5 [00:13<00:08,  4.34s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 4 | train_loss: 0.5098 | train_acc: 0.8008 | test_loss: 0.5462 | test_acc: 0.8769\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 80%|████████  | 4/5 [00:17<00:04,  4.34s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 5 | train_loss: 0.5549 | train_acc: 0.7695 | test_loss: 0.5827 | test_acc: 0.8144\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:21<00:00,  4.37s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train model\n",
+    "# Note: tidak menggunakan engine.train() karena kita mengupdate train() dengan fungsi diatas\n",
+    "\n",
+    "set_seeds()\n",
+    "results = train(model=model,\n",
+    "                train_dataloader=train_dataloader,\n",
+    "                test_dataloader=test_dataloader,\n",
+    "                optimizer=optimizer,\n",
+    "                loss_fn=loss_fn,\n",
+    "                epochs=5,\n",
+    "                device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
