--- a/07_pytorch_experiment_tracking/07_pytorch_experiment_tracking.ipynb
+++ b/07_pytorch_experiment_tracking/07_pytorch_experiment_tracking.ipynb
@@ -1210,6 +1210,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_loss': [0.5614203363656998,\n",
+       "  0.6203586682677269,\n",
+       "  0.5662583969533443,\n",
+       "  0.5098112411797047,\n",
+       "  0.5548607334494591],\n",
+       " 'train_acc': [0.92578125, 0.796875, 0.7890625, 0.80078125, 0.76953125],\n",
+       " 'test_loss': [0.6621854503949484,\n",
+       "  0.5999547044436137,\n",
+       "  0.5310180683930715,\n",
+       "  0.5461784303188324,\n",
+       "  0.5826645493507385],\n",
+       " 'test_acc': [0.8153409090909092,\n",
+       "  0.8257575757575758,\n",
+       "  0.8560606060606061,\n",
+       "  0.8768939393939394,\n",
+       "  0.8143939393939394]}"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Melihat hasil model kita dengan TensorBoard\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load_ext tensorboard\n",
+    "%reload_ext tensorboard\n",
+    "%tensorboard --logdir runs"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
